# calypso

./: .gitignore  .licensing.json  CMakeLists.txt  INSTALL  Jenkinsfile  Makefile.in  README  README.md  configure  configure.ac  configure.in  insert_code_header.py  module_dependency.mod
src/: CALYPSO_src.dox  CMakeLists.txt  Makefile  option_settings
src/C_libraries/: CMakeLists.txt  Makefile
src/C_libraries/BASE/: Makefile  Makefile.depends  calypso_param_c.c  calypso_param_c.h  calypso_zlib_access_c.c  calypso_zlib_access_c.h  calypso_zlib_io_c.c  calypso_zlib_io_c.h  numbers_to_bin_c.c  numbers_to_bin_c.h  read_image_2_png.c  read_image_2_png.h  write_image_2_png.c  write_image_2_png.h
src/Cuda_libraries/: CMakeLists.txt  cuda_optimizations.f90  debugFunctions.cu  gpuFunctions.cu  helper_cuda.h  legendre_poly.cu  legendre_poly.cu_reference  legendre_poly.h  legendre_transform_cuda.f90  transform_b.cu  transform_f.cu  utilities.cu
src/External_libs/: CMakeLists.txt  Makefile
src/External_libs/FFTPACK5.1D/: FFTPACK5.1D - Fast Fourier Transforms, Double Precision.webloc  Makefile  PROBLEM  fftpack5.11d.f90  test_fftpack5.f90
src/Fortran_libraries/: CMakeLists.txt  Fortran_libraries.dox  Makefile
src/Fortran_libraries/MHD_src/: Makefile
src/Fortran_libraries/PARALLEL_src/: CMakeLists.txt  Makefile
src/Fortran_libraries/SERIAL_src/: CMakeLists.txt  Makefile
src/Fortran_libraries/SOLVER_src/: Makefile
src/Fortran_libraries/UTILS_src/: Makefile
src/Fortran_libraries/VIZ_src/: Makefile
src/Jupyter/: Calypso_control_editor.ipynb  Calypso_control_glossary.ipynb
src/Jupyter/.ipynb_checkpoints/: Calypso_control_editor-checkpoint.ipynb  Calypso_control_glossary-checkpoint.ipynb
src/Jupyter/Test/: control_MHD  control_snapshot
src/Vim_script/: Folding_Calypso.vim
src/cmake/Modules/: LICENSE.txt
src/confdb/: aclocal_fc.m4  ax_check_zlib.m4  ax_lib_hdf5.m4  ax_mpi.m4  ax_openmp.m4  ax_pthread.m4
src/module_dependency/: make_module_dependency.f90  shader_into_c.f90
src/programs/: CMakeLists.txt  Makefile
src/programs/Fujitsu_test/: Makefile  Makefile.depends  analyzer_fujitsu_test.f90  main_fujitsu_test.f90
src/programs/SPH_MHD/: CMakeLists.txt  Makefile  Makefile.depends  SPH_analyzer_MHD.f90  analyzer_sph_MHD.f90  analyzer_sph_MHD_noviz.f90  analyzer_sph_MHD_w_4vizs.f90  analyzer_sph_MHD_w_psf.f90  analyzer_sph_MHD_w_vizs.f90  control_MHD  main_sph_MHD.f90  main_sph_MHD_noviz.f90  main_sph_MHD_w_4vizs.f90  main_sph_MHD_w_psf.f90  main_sph_MHD_w_vizs.f90
src/programs/TESTS/: Makefile
src/programs/data_utilities/: CMakeLists.txt  Makefile
src/programs/mesh_utilities/: CMakeLists.txt  Makefile  Makefile.depends  analyzer_check_sph_grids.f90  analyzer_gen_sph_grids.f90  analyzer_test_sph.f90  cmp_trans_sph_indices.f90  cmp_trans_sph_tests.f90  generate_sph_grids_nosf.f90  input_control_const_shell.f90  main_check_sph_grids.f90  main_generate_sph_grids.f90  main_test_sph.f90
tests/: CMakeLists.txt  Makefile
tests/Communication_check/: Makefile  control_resolution  control_sph_shell
tests/Communication_check/ascii/: Makefile
tests/Communication_check/binary/: Makefile
tests/Communication_check/gzip/: Makefile
tests/Communication_check/merged/: in.rj  in.rlm  in.rtm  in.rtp
tests/Communication_check/merged_bin/: Makefile  in.blm
tests/Communication_check/merged_bin_gz/: Makefile
tests/Communication_check/merged_gz/: Makefile
tests/Communication_check/no_file/: CMakeLists.txt  Makefile
tests/Dynamobench_case1/: Makefile  ave_press_test.txt  control_MHD  control_resolution  control_sph_shell  fort.50
tests/Dynamobench_case1/sph_lm31r48c_4/: in.rj  in.rlm
tests/Dynamobench_case2/: CMakeLists.txt  Makefile  control_MHD  control_resolution  control_sph_shell
tests/Dynamobench_case2/controls/: ctl_iso_wz10p
tests/Dynamobench_case2/picked/: README
tests/Dynamobench_case2_cont/: Makefile  control_MHD  control_psf_s0.55  control_psf_z0.3  control_sph_time_average
tests/Dynamobench_case2_cont/field/: README
tests/Dynamobench_case2_cont/reference/: README
tests/Dynamobench_case2_cont/rst_4/: README
tests/FFT_test/: Makefile  compare_FFTPACK.txt  compare_FFTW3.txt  compare_single_FFTW3.txt
tests/Filtered_field_test/: Makefile  beginning_of_log  control_MHD
tests/Filtered_field_test/controls/: README
tests/Filtered_field_test/sph_lm31r48c_ic_4/: README
tests/Gauss_point_test/: Makefile  compare.txt  input.txt
tests/Rendering_tests/: Makefile  control_MHD  control_snapshot
tests/Rendering_tests/ISOSURFACE_defs/: ctl_iso_temp
tests/Rendering_tests/MAP_defs/: ctl_map_cmb_Br  ctl_map_cmb_T  ctl_map_line_cmb_Br  ctl_map_line_cmb_T  ctl_zm_yz_magne  ctl_zm_yz_velo
tests/Rendering_tests/PVR_defs/: control_lights  ctl_pvr_Bpole  ctl_pvr_Bz  ctl_pvr_temp  ctl_pvr_vr  ctl_pvr_wz
tests/Rendering_tests/SECTION_defs/: ctl_fields_z_sections  ctl_psf_cmb  ctl_psf_icb  ctl_psf_z0  ctl_psf_z0.3  ctl_psf_z1.0  ctl_zm_y0
tests/Rendering_tests/SURFACE_defs/: ctl_section_CMB  ctl_section_ICB  ctl_section_z0.3s  ctl_section_zm
tests/Rendering_tests/sph_lm47_r63c_6/: control_assemble_sph  control_resolution
tests/Rendering_tests/view_defines/: control_camera  control_map_view  control_pole  control_view  control_zm_view
tests/field/: README
tests/heterogineous_temp/: CMakeLists.txt  Makefile  control_MHD  control_resolution  control_sph_shell
tests/heterogineous_temp/field/: README
tests/heterogineous_temp/rst_2/: README  rst.0.fsb  rst.1.fsb
tests/heterogineous_temp/sph_lm4r64c_2/: README  in.blm  in.brj  in.btm  in.btp
tests/restart_assemble/: Makefile  control_assemble_sph
tests/restart_assemble/ascii/: Makefile  control_assemble_sph  control_sph_shell
tests/restart_assemble/binary/: Makefile  control_assemble_sph  control_assemble_sph~  control_sph_shell
tests/rst_4/: README
tests/snapshot_test/: Makefile  ave_press_test.txt  control_compare_psf  control_snapshot  rst_4
tests/sym_asym_field_test/: Makefile  biginning_of_log  control_MHD  control_resolution  control_sph_shell
(+2469 files in other folders)
