

# Define source files in BASE and its subdirectories
FILE(GLOB BASE_C_INCLUDE_FILES BASE/*.h)
FILE(GLOB BASE_C_SRC_FILES BASE/*.c)

SET(CALYPSO_C_INCLUDE_FILES ${BASE_C_INCLUDE_FILES})
SET(CALYPSO_C_SRC_FILES ${BASE_C_SRC_FILES})

# Add Library references
ADD_LIBRARY(calypso_c ${CALYPSO_C_SRC_FILES} ${CALYPSO_C_INCLUDE_FILES})

IF (ZLIB_FOUND)
TARGET_LINK_LIBRARIES(calypso_c ${ZLIB_LIBRARIES})
ENDIF (ZLIB_FOUND)
